<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="app_name">IOS-8 Lock Screen</string>
    <string name="settins">Settings</string>
    <string name="enable_screen">Enable Screen</string>
    <string name="select_photo">Picture</string>
    <string name="slide_to_unlock">> Slide to Unlock</string>
    <string name="feedback_setting">Feedback Settings</string>
    <string name="gallery_title">Wallpapers</string>
    <string name="share">Share</string>
    <string name="preview">Preview</string>
    <string name="moreapp">Apps by Featured Apps</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="general">General</string>
    <string name="topapp">More Top Apps</string>
    <string name="exitapp">Exit application?</string>
    <string name="exittrymoremsg">Do you want to try more free games?</string>
    <string name="exitsure">Exit</string>
    <string name="exitcancel">Cancel</string>
    <string name="exitgetmore">Games</string>
    <string name="appsby_syne_title_label">Featured Apps</string>
    <string name="top_apps_title_label">Great Apps</string>
    <string name="feature_apps">Feature Apps</string>
    <string name="setting_title_label">Settings</string>
    <string name="preview_label">Preview</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wallpaper">wallPaper</string>

</resources>
